--- a/index.html
+++ b/index.html
@@ -1,56 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Visitor Counter</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 100px;
-    background: #f0f8ff;
-  }
-
-  .counter-box {
-    display: inline-block;
-    background: #fff;
-    padding: 30px 50px;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  }
-
-  .counter-box h2 {
-    margin: 0 0 10px;
-    color: #0078d4;
-  }
-
-  .counter-box span {
-    font-size: 2em;
-    color: #ff4500;
-  }
-</style>
-</head>
-<body>
-
-<div class="counter-box">
-  <h2>Visitor Counter</h2>
-  <p>Visits: <span id="count">0</span></p>
+<div style="text-align:center; margin-top:50px;">
+  <h2 style="font-family: 'Courier New', monospace; color: #00FF00; text-shadow: 0 0 5px #0F0;">
+    Visitor Counter
+  </h2>
+  <iframe 
+    src="https://countapi.xyz/hit/youraveragememeguy-home/visits?label=&color=000000&background=00FF00&font=Courier"
+    style="border:none; width:120px; height:40px; display:inline-block; margin-top:10px;">
+  </iframe>
 </div>
-
-<script>
-  // Use a simple label instead of full Google Sites URL
-  const counterLabel = "youraveragememeguy-home";
-
-  // Fetch visitor count from CountAPI
-  fetch(`https://api.countapi.xyz/hit/${counterLabel}/visits`)
-    .then(response => response.json())
-    .then(data => {
-      document.getElementById("count").innerText = data.value;
-    })
-    .catch(() => {
-      document.getElementById("count").innerText = "N/A";
-    });
-</script>
-
-</body>
-</html>
