--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <div style="text-align:center; margin-top:50px;">
-  <h2 style="font-family: 'Courier New', monospace; color: #00FF00; text-shadow: 0 0 5px #0F0;">
-    Visitor Counter
-  </h2>
+  <h2 style="font-family: 'Courier New', monospace;">Visitor Counter</h2>
   <iframe 
-    src="https://countapi.xyz/hit/youraveragememeguy-home/visits?label=&color=000000&background=00FF00&font=Courier"
-    style="border:none; width:120px; height:40px; display:inline-block; margin-top:10px;">
+    src="https://countapi.xyz/hit/youraveragememeguy-home/visits" 
+    style="border:none; width:100px; height:30px;">
   </iframe>
 </div>
