--- a/index.html
+++ b/index.html
@@ -1,65 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Retro 7-Segment Visitor Counter</title>
-<style>
-  body {
-    font-family: monospace;
-    background: #000;
-    color: #0F0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
-
-  .counter-container {
-    display: flex;
-    gap: 5px;
-    font-size: 50px;
-    background: #111;
-    padding: 20px 40px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px #0F0;
-  }
-
-  .digit {
-    display: inline-block;
-    width: 50px;
-    text-align: center;
-    line-height: 50px;
-  }
-</style>
-</head>
-<body>
-
-<div class="counter-container">
-  <span class="digit" id="d1">0</span>
-  <span class="digit" id="d2">0</span>
-  <span class="digit" id="d3">0</span>
-  <span class="digit" id="d4">0</span>
-</div>
-
-<script>
-  const counterLabel = "memeguycounter"; // simple label for CountAPI
-
-  function updateDigits(num) {
-    const str = num.toString().padStart(4, '0'); // 4 digits
-    document.getElementById('d1').innerText = str[0];
-    document.getElementById('d2').innerText = str[1];
-    document.getElementById('d3').innerText = str[2];
-    document.getElementById('d4').innerText = str[3];
-  }
-
-  // Fetch current count and increment
-  fetch(`https://api.countapi.xyz/hit/${counterLabel}/visits`)
-    .then(response => response.json())
-    .then(data => updateDigits(data.value))
-    .catch(() => updateDigits(0));
-</script>
-
-</body>
-</html>
+ <a href='https://www.free-counters.org/'>https://www.Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e61bf941facac044b238a2d99e3678b1ba3a0356'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1403296/t/5"></script>
