--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
- <a href='https://www.free-counters.org/'>https://www.Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=4bd10175812e9df515e152fc107fca8de689600b'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1403298/t/9"></script>
+<script type="text/javascript" src="https://counter.websiteout.com/js/2/0/0/0"></script>
